# permissioner

./: CMakeLists.txt  LICENSE  README.md  exports
libpermissioner/: CMakeLists.txt
libpermissioner/include/permissioner/: Callback.h  Config.h  Float.h  Group.h  Nice.h  Permissions.h  StringUtils.h  Tree.h  User.h
libpermissioner/src/: Callback.cpp  Config.cpp  Float.cpp  Group.cpp  Nice.cpp  Permissions.cpp  StringUtils.cpp  Tree.cpp  User.cpp
permissionerc/: CMakeLists.txt
permissionerc/src/: permissionerc.cpp
permissionerd/: CMakeLists.txt
permissionerd/src/: Config.cpp  Config.h  Permissions.cpp  Permissions.h  StringUtils.cpp  Tree.cpp  Tree.h  permissionerd.cpp
tests/: CMakeLists.txt
tests/config/: CMakeLists.txt  idle.cfg  nice.cfg  nice_idle.cfg  sleep_wait.cfg  test.cfg  testConfig.cpp
tests/trees/: CMakeLists.txt  testTrees.bash  testTrees.cpp  trees.cfg
